provisionning/k3s/k3s_and_docker/pods/whoami/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`demo1.tferdinand.net`) && PathPrefix(`/`)
    services:
    - name: whoami
      port: 80
